--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Details.cshtml
@@ -60,10 +60,7 @@
         </tr>
     </table>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.MaPhieu })
-</p>
-<p>
-    @Html.ActionLink("Back to List", "Index", "RegistrationForm", null, new { @class = "create-btn" })
+<p class="pl-12 ml-16 mt-32 mb-24">
+    @Html.ActionLink("Back to List", "Index")
 </p>
 
