--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Create.cshtml
@@ -15,7 +15,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group ml-0">
+        <div class="form-group">
             @Html.LabelFor(model => model.ThoiGianNhanPhong, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ThoiGianNhanPhong, new { htmlAttributes = new { @class = "form-control", id = "checkIn" } })
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div class="form-group ml-0">
+        <div class="form-group">
             @Html.LabelFor(model => model.ThoiGianTraPhong, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ThoiGianTraPhong, new { htmlAttributes = new { @class = "form-control", id = "checkOut" } })
@@ -31,42 +31,70 @@
             </div>
         </div>
 
-        <div class="form-group ml-0">
+        <div class="form-group">
             @Html.LabelFor(model => model.KhachHang.SoDienThoai, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.KhachHang.SoDienThoai, new { htmlAttributes = new { @class = "form-control", Name = "phoneNumber" } })
+                @Html.EditorFor(model => model.KhachHang.SoDienThoai, new { htmlAttributes = new { @class = "form-control", Name = "phoneNumber", id = "phone-number" } })
                 @Html.ValidationMessage("phoneNumber", "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <label class="control-label col-md-2">Rooms</label>
-        <div class="room-chosen">
-
-        </div>
-        <p class="add-btn" id="add-room-btn">Add room</p>
-        <div class="add-room-form">
-            <div class="room-container">
-                <div class="booking-room col-12 col-lg-12">
-                    <i class="fa-solid fa-x close-btn"></i>
-                    <form id="booking-form">
-                        <h2>Add room</h2>
-                        <div class="form-group ml-0">
-                            <label class="control-label">Room Type</label>
-                            @Html.DropDownList("MaLoaiPhong", null, htmlAttributes: new { @class = "form-control room-id", @onchange = "getVal()", id = "roomType" })
-                            <span class="form-message"></span>
-                        </div>
-                        <div class="form-group ml-0">
-                            <label class="control-label">Room</label>
-                            @Html.DropDownList("DSPhong", null, htmlAttributes: new { @class = "form-control room-number", id = "roomNumber" })
-                            <span class="form-message"></span>
-                        </div>
-                        <div class="form-group ml-0">
-                            <label class="control-label">Client Quantity</label>
-                            <input class="form-control clien-quantity" type="number" min="1" max="4" />
-                            <span class="form-message"></span>
-                        </div>
-                        <p class="submit-form-btn submit-room">Submit</p>
-                    </form>
+        <div class="form-group">
+            <label class="control-label col-md-2">Rooms</label>
+            <table class="room-chosen table col-md-10">
+                <tr>
+                    <th class="col-md-3">
+                        Room ID
+                    </th>
+                    <th class="col-md-3">
+                        Room Number
+                    </th>
+                    <th class="col-md-3">
+                        Quantity
+                    </th>
+                    <th class="col-md-1">
+                         
+                    </th>
+                </tr>
+            </table>
+            <p class="btn btn-default add-btn col-md-10" id="add-room-btn">Add room</p>
+            <div class="add-room-form">
+                <div class="room-container">
+                    <div class="booking-room col-12 col-lg-12">
+                        <i class="fa-solid fa-x close-btn"></i>
+                        <form id="booking-form">
+                            <h2 style="
+    margin-left: auto;
+    margin-right: auto;
+">Add Room Form</h2>
+                            <div class="form-group ml-0">
+                                <label class="control-label">Room Type</label>
+                                @Html.DropDownList("MaLoaiPhong", null, htmlAttributes: new { @class = "form-control room-id", @onchange = "getVal()", id = "roomType" })
+                                <span class="form-message"></span>
+                            </div>
+                            <div class="form-group ml-0">
+                                <label class="control-label">Room</label>
+                                @Html.DropDownList("DSPhong", null, htmlAttributes: new { @class = "form-control room-number", id = "roomNumber" })
+                                <span class="form-message"></span>
+                            </div>
+                            <div class="form-group ml-0">
+                                <label class="control-label">Client Quantity</label>
+                                <select class="form-control clien-quantity">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                </select>
+                                <span class="form-message"></span>
+                            </div>
+                            <p class="submit-form-btn submit-room" style="
+    margin-left: auto;
+    margin-right: auto;
+">Submit</p>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,7 +107,7 @@
     </div>
 
 
-    <div>
+    <div class="pl-12 ml-16 mt-32 mb-24">
         @Html.ActionLink("Back to List", "Index")
     </div>
 }
@@ -126,8 +154,17 @@
     document.addEventListener("DOMContentLoaded", function () {
         var dateCheckIn = document.getElementById("checkIn");
         var dateCheckOut = document.getElementById("checkOut");
+        dateCheckOut.style.opacity = "0.3";
+        dateCheckOut.style.boxShadow = "none";
 
-        dateCheckIn.addEventListener("change", function () {
+        dateCheckOut.onclick = (e) => {
+            if (dateCheckIn.value == "") {
+                e.preventDefault();
+            }
+        }
+
+        dateCheckIn.onchange = () => {
+            dateCheckOut.style.opacity = "1";
             var date = new Date(dateCheckIn.value);
             date.setDate(date.getDate() + 1);
             var formatDate = date.toISOString().split('T')[0];
@@ -143,8 +180,15 @@
             } else {
                 dateCheckOut.value = '';
             }
-        });
+
+            console.clear;
+            console.log(dateCheckIn.value);
+        }
+
+        
     });
+
+
     //=====================  Xử lý khi load lại trang  =====================
         document.addEventListener("DOMContentLoaded", function () {
             resetListPhong();
