--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Delete.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Delete.cshtml
@@ -7,9 +7,8 @@
 
 <h2 class="card-title title ml-32">Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class=" ml-32">Are you sure you want to delete this?</h3>
 <div>
-    <h4>PhieuThue</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
