--- a/HotelManagement/Areas/Admin/Views/Guest/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Create.cshtml
@@ -19,7 +19,7 @@
             @Html.LabelFor(model => model.CCCD, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CCCD, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CCCD, "", new { @class = "text-danger" })
+                @Html.ValidationMessage("CCCD", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -51,7 +51,7 @@
             @Html.LabelFor(model => model.SoDienThoai, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.SoDienThoai, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SoDienThoai, "", new { @class = "text-danger" })
+                @Html.ValidationMessage("SoDienThoai", new { @class = "text-danger" })
             </div>
         </div>
 
