--- a/HotelManagement/Areas/Admin/Views/Guest/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Index.cshtml
@@ -82,9 +82,8 @@
                 }
             </td>*@
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.MaKhachHang }) |
-                @Html.ActionLink("Details", "Details", new { id = item.MaKhachHang }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.MaKhachHang })
+                @Html.ActionLink("Edit", "Edit", new { id = item.MaKhachHang }) 
+                @Html.ActionLink("Details", "Details", new { id = item.MaKhachHang })
             </td>
         </tr>
     }
