--- a/HotelManagement/Areas/Admin/Views/RoomType/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Index.cshtml
@@ -51,9 +51,8 @@
                 <img src="~/Assets/admin/img/@item.HinhAnh" style="width: 100px;" />
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.MaLoaiPhong.Trim() }) |
-                @Html.ActionLink("Details", "Details", new { id = item.MaLoaiPhong.Trim() }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.MaLoaiPhong.Trim() })
+                @Html.ActionLink("Edit", "Edit", new { id = item.MaLoaiPhong.Trim() }) 
+                @Html.ActionLink("Details", "Details", new { id = item.MaLoaiPhong.Trim() }) 
             </td>
         </tr>
     }
