--- a/HotelManagement/Areas/Admin/Views/Service/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Service/Index.cshtml
@@ -43,9 +43,8 @@
                 @Html.DisplayFor(modelItem => item.GiaDichVu)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.MaDichVu.Trim() }) |
-                @Html.ActionLink("Details", "Details", new { id = item.MaDichVu.Trim() }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.MaDichVu.Trim() })
+                @Html.ActionLink("Edit", "Edit", new { id = item.MaDichVu.Trim() })
+                @Html.ActionLink("Details", "Details", new { id = item.MaDichVu.Trim() })
             </td>
         </tr>
     }
