--- a/HotelManagement/Areas/Admin/Views/Login/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Login/Index.cshtml
@@ -41,7 +41,7 @@
 
                     <div class="text-right p-t-8 p-b-31">
                         <a href="#">
-                            Forgot password?
+                            @*Forgot password?*@
                         </a>
                     </div>
 
