--- a/HotelManagement/Areas/Admin/Views/Staff/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Index.cshtml
@@ -62,9 +62,8 @@
                 @Html.DisplayFor(modelItem => item.ChucDanh)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.MaNhanVien }) |
-                @Html.ActionLink("Details", "Details", new { id = item.MaNhanVien }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.MaNhanVien })
+                @Html.ActionLink("Edit", "Edit", new { id = item.MaNhanVien }) 
+                @Html.ActionLink("Details", "Details", new { id = item.MaNhanVien })
             </td>
         </tr>
     }
