--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Create.cshtml
@@ -11,100 +11,102 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="form-horizontal">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ThoiGianNhanPhong, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ThoiGianNhanPhong, new { htmlAttributes = new { @class = "form-control", id = "checkIn" } })
-                @Html.ValidationMessageFor(model => model.ThoiGianNhanPhong, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.ThoiGianNhanPhong, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ThoiGianNhanPhong, new { htmlAttributes = new { @class = "form-control", id = "checkIn" } })
+            @Html.ValidationMessageFor(model => model.ThoiGianNhanPhong, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ThoiGianTraPhong, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ThoiGianTraPhong, new { htmlAttributes = new { @class = "form-control", id = "checkOut" } })
-                @Html.ValidationMessageFor(model => model.ThoiGianTraPhong, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.ThoiGianTraPhong, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ThoiGianTraPhong, new { htmlAttributes = new { @class = "form-control", id = "checkOut" } })
+            @Html.ValidationMessageFor(model => model.ThoiGianTraPhong, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.KhachHang.SoDienThoai, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.KhachHang.SoDienThoai, new { htmlAttributes = new { @class = "form-control", Name = "phoneNumber", id = "phone-number" } })
-                @Html.ValidationMessage("phoneNumber", "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.KhachHang.SoDienThoai, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.KhachHang.SoDienThoai, new { htmlAttributes = new { @class = "form-control", Name = "phoneNumber", id = "phone-number" } })
+            @Html.ValidationMessage("phoneNumber", "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            <label class="control-label col-md-2">Rooms</label>
-            <table class="room-chosen table col-md-10">
-                <tr>
-                    <th class="col-md-3">
-                        Room ID
-                    </th>
-                    <th class="col-md-3">
-                        Room Number
-                    </th>
-                    <th class="col-md-3">
-                        Quantity
-                    </th>
-                    <th class="col-md-1">
-                         
-                    </th>
-                </tr>
-            </table>
-            <p class="btn btn-default add-btn col-md-10" id="add-room-btn">Add room</p>
-            <div class="add-room-form">
-                <div class="room-container">
-                    <div class="booking-room col-12 col-lg-12">
-                        <i class="fa-solid fa-x close-btn"></i>
-                        <form id="booking-form">
-                            <h2 style="
+    <div class="form-group">
+        <label class="control-label col-md-2">Rooms</label>
+        <table class="room-chosen table col-md-10">
+            <tr>
+                <th class="col-md-3">
+                    Room ID
+                </th>
+                <th class="col-md-3">
+                    Room Number
+                </th>
+                <th class="col-md-3">
+                    Quantity
+                </th>
+                <th class="col-md-1">
+
+                </th>
+            </tr>
+        </table>
+        <p class="btn btn-default add-btn col-md-10" id="add-room-btn">Add room</p>
+        <div class="add-room-form">
+            <div class="room-container">
+                <div class="booking-room col-12 col-lg-12">
+                    <i class="fa-solid fa-x close-btn"></i>
+                    <form id="booking-form">
+                        <h2 style="
     margin-left: auto;
     margin-right: auto;
-">Add Room Form</h2>
-                            <div class="form-group ml-0">
-                                <label class="control-label">Room Type</label>
-                                @Html.DropDownList("MaLoaiPhong", null, htmlAttributes: new { @class = "form-control room-id", @onchange = "getVal()", id = "roomType" })
-                                <span class="form-message"></span>
-                            </div>
-                            <div class="form-group ml-0">
-                                <label class="control-label">Room</label>
-                                @Html.DropDownList("DSPhong", null, htmlAttributes: new { @class = "form-control room-number", id = "roomNumber" })
-                                <span class="form-message"></span>
-                            </div>
-                            <div class="form-group ml-0">
-                                <label class="control-label">Client Quantity</label>
-                                <select class="form-control clien-quantity">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    <option value="6">6</option>
-                                </select>
-                                <span class="form-message"></span>
-                            </div>
-                            <p class="submit-form-btn submit-room" style="
+">
+                            Add Room Form
+                        </h2>
+                        <div class="form-group ml-0">
+                            <label class="control-label">Room Type</label>
+                            @Html.DropDownList("MaLoaiPhong", null, htmlAttributes: new { @class = "form-control room-id", @onchange = "getVal()", id = "roomType" })
+                            <span class="form-message"></span>
+                        </div>
+                        <div class="form-group ml-0">
+                            <label class="control-label">Room</label>
+                            @Html.DropDownList("DSPhong", null, htmlAttributes: new { @class = "form-control room-number", id = "roomNumber" })
+                            <span class="form-message"></span>
+                        </div>
+                        <div class="form-group ml-0">
+                            <label class="control-label">Client Quantity</label>
+                            <select class="form-control clien-quantity">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                            </select>
+                            <span class="form-message"></span>
+                        </div>
+                        <p class="submit-form-btn submit-room" style="
     margin-left: auto;
     margin-right: auto;
 ">Submit</p>
-                        </form>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default create-btn" />
-            </div>
+    </div>
+    @Html.ValidationMessage("CustomError", new { @class = "text-danger" })
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button class="btn btn-default create-btn">Create</button>
         </div>
     </div>
+</div>
 
 
     <div class="pl-12 ml-16 mt-32 mb-24">
