--- a/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
@@ -42,21 +42,21 @@
         if (item.HienTrang == true)
         {
             <div class="col-xl-3 col-md-6 mb-4 ">
-                <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card border-left-success shadow h-100 py-2">
                     <div class="room-body">
-                        <div class="row no-gutters align-items-center">
-                            <div class="col mr-2">
-                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                        <div class="row no-gutters align-items-center" style="margin-right: 0">
+                            <div class="col mr-2 df-flex-col">
+                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1" style="font-size: 16px">
                                     @Html.DisplayFor(modelItem => item.LoaiPhong.TenLoaiPhong)
                                 </div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">@Html.DisplayFor(modelItem => item.MaPhong)</div>
-                                <div>
-                                    @Html.ActionLink("Details", "Details", new { id = item.MaPhong.Trim() }) 
+                                <div class="df-flex-end">
+                                    @Html.ActionLink("Details", "Details", new { id = item.MaPhong.Trim() }, new {@class = "button-success" }) 
                                 </div>
                             </div>
-                            <div class="col-auto">
+                            @*<div class="col-auto">
                                 <i class="fa-solid fa-circle-minus fa-2x text-gray-300"></i>
-                            </div>
+                            </div>*@
                         </div>
                     </div>
                 </div>
@@ -67,20 +67,20 @@
             <div class="col-xl-3 col-md-6 mb-4 ">
                 <div class="card border-left-danger shadow h-100 py-2">
                     <div class="room-body">
-                        <div class="row no-gutters align-items-center">
-                            <div class="col mr-2">
-                                <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
+                        <div class="row no-gutters align-items-center" style="margin-right: 0">
+                            <div class="col mr-2 df-flex-col">
+                                <div class="text-xs font-weight-bold text-danger text-uppercase mb-1" style="font-size: 16px">
                                     @Html.DisplayFor(modelItem => item.LoaiPhong.TenLoaiPhong)
                                 </div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">@Html.DisplayFor(modelItem => item.MaPhong)</div>
-                                <div>
-                                    @Html.ActionLink("Edit", "Edit", new { id = item.MaPhong.Trim() })
-                                    @Html.ActionLink("Details", "Details", new { id = item.MaPhong.Trim() })
+                                <div class="df-flex-end">
+                                    @Html.ActionLink("Edit", "Edit", new { id = item.MaPhong.Trim() }, new {@class = "button-danger-outline" })
+                                    @Html.ActionLink("Details", "Details", new { id = item.MaPhong.Trim() }, new {@class = "button-danger" })
                                 </div>
                             </div>
-                            <div class="col-auto">
+                            @*<div class="col-auto">
                                 <i class="fa-solid fa-circle-xmark fa-2x text-gray-300"></i>
-                            </div>
+                            </div>*@
                         </div>
                     </div>
                 </div>
