--- a/HotelManagement/Areas/Admin/Views/RoomType/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Details.cshtml
@@ -37,7 +37,7 @@
     </table>
 </div>
 <p class="pl-12 ml-16 mt-32 mb-24">
-    @Html.ActionLink("Edit", "Edit", new { id = Model.MaLoaiPhong, @class = "create-btn" })
+    @Html.ActionLink("Edit", "Edit", new { id = Model.MaLoaiPhong }, new { @class = "create-btn" })
 </p>
 <p class="pl-12 ml-16 mt-32 mb-24">
     @Html.ActionLink("Back to List", "Index")
