--- a/HotelManagement/Areas/Admin/Views/Service/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Service/Details.cshtml
@@ -23,7 +23,11 @@
                 @Html.DisplayNameFor(model => model.GiaDichVu)
             </th>
             <td>
-                @Html.DisplayFor(model => model.GiaDichVu)
+                @*@Html.DisplayFor(model => model.GiaDichVu)*@
+                @{
+                    var tienDV = Model.GiaDichVu;
+                }
+                @String.Format("{0:#,##0}", tienDV).Replace(",", ".") VNĐ
             </td>
         </tr>
     </table>
