--- a/HotelManagement/Areas/Admin/Views/Home/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                 Earnings ( VNĐ )
                             </div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TotalRevenue</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TotalRevenue VNĐ</div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -144,7 +144,7 @@
             <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold text-primary">Room-type Revenue</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Room-type</h6>
                     @*<div class="dropdown no-arrow">
                             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
